--- a/Steez/Sources/App/Info.plist
+++ b/Steez/Sources/App/Info.plist
@@ -24,6 +24,8 @@
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
 		<false/>
+		<key>UISceneConfigurations</key>
+		<dict/>
 	</dict>
 	<key>UILaunchScreen</key>
 	<dict/>
@@ -53,6 +55,21 @@
 		<string>IBMPlexMono-Medium.ttf</string>
 		<string>IBMPlexSans-Medium.ttf</string>
 		<string>IBMPlexSans-Regular.ttf</string>
+	</array>
+	<key>SupabaseURL</key>
+	<string>$(SUPABASE_URL)</string>
+	<key>SupabaseAnonKey</key>
+	<string>$(SUPABASE_ANON_KEY)</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>steez-auth</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>steez</string>
+			</array>
+		</dict>
 	</array>
 </dict>
 </plist>
