--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ coverage/
 # Temporary files
 *.tmp
 *.temp 
+
+# ─── Lambda build artifacts ─────────────────────────────
+video_frame_lambda/package/
+video_frame_lambda/lambda.zip
